k8s/platform/observability/templates/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: observability
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pi-k3s.chalupatech.com`) && PathPrefix(`/grafana`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
          namespace: kube-system
      services:
        - name: observability-grafana
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-tls
  namespace: observability
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`pi-k3s.chalupatech.com`) && PathPrefix(`/grafana`)
      kind: Rule
      services:
        - name: observability-grafana
          port: 80
  tls:
    secretName: pi-k3s-tls
