k8s/platform/observability/templates/vm-write-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vm-write
  namespace: observability
  annotations:
    external-dns.alpha.kubernetes.io/target: "100.72.211.115"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vm-write.chalupatech.com`) && Method(`POST`) && PathPrefix(`/api/v1/write`)
      kind: Rule
      middlewares:
        - name: gh-actions-telemetry-auth
      services:
        - name: vmsingle-vmstack
          port: 8428
  tls:
    secretName: vm-write-tls
